tests/src/frontend/syntax/invalid/char_escape_surrogate.sk
fun main(): String {
  '\udc00'.toString()
}
